refactor : extract getProjectsSummary method
getMeInvolvedProjects 메서드와 getMeRegisteredProjects 메서드에서 중복되는 코드들을 getProjectsSummary 메서드로 추출해서 중복을 제거함